--- a/deployment/playbooks/deploy.yml
+++ b/deployment/playbooks/deploy.yml
@@ -3,9 +3,9 @@
 - name: deploy | prerequisites
   hosts: appservers
   become: yes
-  become_user: newstap
+  become_user: stubgun
   vars:
-    site_dir: /home/newstap/www/newstap.com
+    site_dir: /home/stubgun/www/newstap.com
   tasks:
     - name: create site folder (if needed)
       file:
